# ChangeLog for net-libs/xulrunner
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.207 2009/05/01 14:04:51 maekke Exp $

  01 May 2009; Markus Meier <maekke@gentoo.org> xulrunner-1.9.0.10.ebuild:
  amd64 stable, bug #267234

  30 Apr 2009; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.10.ebuild:
  alpha/arm/ia64/sparc stable wrt #267234

  30 Apr 2009; Jeroen Roovers <jer@gentoo.org> xulrunner-1.9.0.10.ebuild:
  Stable for HPPA (bug #267234).

  29 Apr 2009; Brent Baude <ranger@gentoo.org> xulrunner-1.9.0.10.ebuild:
  Marking xulrunner-1.9.0.10 ppc64 and ppc for bug 267234

  29 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  xulrunner-1.9.0.10.ebuild:
  stable x86, security bug 267234

*xulrunner-1.9.0.10 (28 Apr 2009)

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9.0.9.ebuild,
  +xulrunner-1.9.0.10.ebuild:
  Version bump

*xulrunner-1.9.0.9 (22 Apr 2009)

  22 Apr 2009; Raúl Porcel <armin76@gentoo.org> +xulrunner-1.9.0.9.ebuild:
  Version bump

  21 Apr 2009; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.8.ebuild:
  Bump patchset to add a patch for arm+gcc4.3 failure from Debian

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xulrunner-1.9.0.8.ebuild:
  Stable on sparc, security bug #262704 and security bug #265165

  03 Apr 2009; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.8.ebuild:
  Bump patchset to fix unaligned accesses, bug #251603, patch by Friedrich
  Oslage <bluebird at gentoo dot org>, add ~sparc

  30 Mar 2009; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9.0.7.ebuild,
  xulrunner-1.9.0.8.ebuild:
  alpha/arm/ia64/x86 stable wrt #262704

  29 Mar 2009; Brent Baude <ranger@gentoo.org> xulrunner-1.9.0.8.ebuild:
  Marking xulrunner-1.9.0.8 ppc64 for bug 262704

  29 Mar 2009; Richard Freeman <rich0@gentoo.org> xulrunner-1.9.0.8.ebuild:
  amd64 stable - 262704

  29 Mar 2009; nixnut <nixnut@gentoo.org> xulrunner-1.9.0.8.ebuild: