@@ -5,9 +5,11 @@ AUX xulrunner-1.9_beta5-prefix.patch 1824 RMD160 e784c2fe11620a39699aea341d2e363
 AUX xulrunner.conf 113 RMD160 8be48cf5040eb5753c8eb35c048cc6b2c1a8a057 SHA1 62cce7ee5b1e51343c3dbc388894011da913d9d4 SHA256 9ac56b42cfb48854d23c299330ad327af5f0815140dcb7fdee905b660cd9a8a3
 DIST xulrunner-1.9.0.10-patches-0.1.tar.bz2 7077 RMD160 73612f1b619fef5d02e8c8f8318afe192e435e42 SHA1 8a48e53951216c330d4908def93a5c0201f5a890 SHA256 bc0c0d26258bc17ffa5cd513089fe94395ff8f6c17023cd363fac30cdd675410
 DIST xulrunner-1.9.0.10.tar.bz2 34167778 RMD160 96ca5c569bbee78924c6e9cb5fea660870a8c096 SHA1 926d9042557e2d767db91b1d183327713fb090d3 SHA256 fe4091f4de50278567b4e26effea66a998dd41f455077e1e37cff8b3417a8f34
+DIST xulrunner-1.9.0.11.tar.bz2 34209785 RMD160 63ace56728ceac5d54b8613c842d69791a87be3d SHA1 9e64464303eef215c11793ac1c096abac58215f6 SHA256 142aa222bbf800867f6301f05ca8c158edc17bfb3ad11c73c38a57ca7da3c5a2
 DIST xulrunner-1.9.0.8-patches-0.2.tar.bz2 7023 RMD160 526c6d01fa42d5d958e0504ccf8dc43362ebf292 SHA1 be8fd86abc065579e16ba7cc5e3aa7496c8782a3 SHA256 6fed6085f59534b9595fe2c13fd892695ffed5413228e1da21ae0455adbb635c
 DIST xulrunner-1.9.0.8.tar.bz2 34169400 RMD160 5b04b74bedfe6cdc023248b6b8e7b8a1a72499a2 SHA1 99adcd31779105778d03b2cfdbe59fb1d3607f7e SHA256 ac1dad103922f8c11f4f88174f21acd841e5a7fcb40ac9702707b59f0a287960
 EBUILD xulrunner-1.9.0.10.ebuild 5126 RMD160 e47afa4895abafe18f409994ac98acd23e29cd4d SHA1 e15940377720467b09e2829c3577467e4183a0c2 SHA256 4059d930203cecdf3ffa5cc8a3705781c5cac1f52ac1b22180432892292608ad
+EBUILD xulrunner-1.9.0.11.ebuild 5137 RMD160 68de82822bc6b79babe6dc395854423975b4ec86 SHA1 0e9774e59c2714ec05c94fb58b2f675aab515d5d SHA256 bdf287ddb496931eb02e1f7b8e44d713f9a92b9d676b43ba48908423ba2c2d5b
 EBUILD xulrunner-1.9.0.8.ebuild 5501 RMD160 f0eb8fd20e40d850368fc6312a9d2c494d21c352 SHA1 3b911caadc0ee1bdb9fa68d0509b63a3c20b420f SHA256 7d055571faddf384ad51d4dc4ce990ed1ed02228ca4fdb526032075256c87c12
-MISC ChangeLog 26525 RMD160 6581c2fec3a7ed664d6b7b5e592ba968974b00d9 SHA1 0ad6a0bca7563e6f0cf37f638212239d547bb859 SHA256 c844f807f00c5dd54d41af4431f597537ec48083e633a9f55e0ce492913fec85
+MISC ChangeLog 26654 RMD160 7da9489cb91749b947f1bba0c2c86b0d74f5fbf4 SHA1 0d6f6ea60e410011eeb4bef885a5f84a1281838a SHA256 6659390019fcd5bb6e21c865cecd0777c34f4d4ccf54a26de123d789d18c45c2
 MISC metadata.xml 263 RMD160 9ed9d79d17d0a991e88c31ae6342996519ffef5b SHA1 0de183203298ce0f1c2ecc3fc8149842c4a0ec60 SHA256 64bfc93c4ab02ef2fe9b61b8157eb722d6cca5d552eecc18eaaf8e95980d2550
