@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.207 2009/05/01 14:04:51 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.208 2009/06/13 11:06:27 armin76 Exp $
+
+*xulrunner-1.9.0.11 (13 Jun 2009)
+
+  13 Jun 2009; Raúl Porcel <armin76@gentoo.org> +xulrunner-1.9.0.11.ebuild:
+  Version bump
 
   01 May 2009; Markus Meier <maekke@gentoo.org> xulrunner-1.9.0.10.ebuild:
   amd64 stable, bug #267234
